Change variable name for author's git repository

--- a/_config.yml
+++ b/_config.yml
@@ -19,4 +19,4 @@ include: ["_pages"]
 author: Hao Thi Tran
 email: hello@haothitran.com
 website: https://haothitran.com/
-repo: https://github.com/haothitran/
+git: https://github.com/haothitran/
