--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ kramdown:
   input: GFM
   syntax_highlighting: rouge
 highlighter: rouge
+
+# build settings
 include: ["_pages"]
 
 # author information
